@@ -35,8 +35,11 @@ import com.google.android.accessibility.braille.translate.TranslationResultCusto
 import com.google.android.accessibility.braille.translate.TranslatorFactory;
 import com.google.android.accessibility.braille.translate.liblouis.LibLouis;
 import com.google.android.accessibility.utils.SharedPreferencesUtils;
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableSet;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
+import java.util.HashSet;
+import java.util.Set;
 import com.google.common.primitives.Ints;
 import com.google.gson.Gson;
 import com.google.gson.reflect.TypeToken;
@@ -243,13 +246,13 @@ public class BrailleUserPreferences {
         getSharedPreferences(context, BRAILLE_SHARED_PREFS_FILENAME)
             .getStringSet(
                 context.getString(R.string.pref_brailleime_translator_codes_preferred),
-                ImmutableSet.of());
+                Set.of());
     if (preferredCodesInStringSet.isEmpty()) {
-      return ImmutableList.of(BrailleLanguages.getDefaultCode(context));
+      return List.of(BrailleLanguages.getDefaultCode(context));
     }
     List<Code> preferredCodesInList = extractValidCodes(preferredCodesInStringSet);
     return preferredCodesInList.isEmpty()
-        ? ImmutableList.of(BrailleLanguages.getDefaultCode(context))
+        ? List.of(BrailleLanguages.getDefaultCode(context))
         : preferredCodesInList;
   }
 
@@ -523,7 +526,7 @@ public class BrailleUserPreferences {
       Set<String> selectedCodesInStringSet =
           new HashSet<>(
               brailleKeyboardSharedPreferences.getStringSet(
-                  selectedCodePrefKey, ImmutableSet.of()));
+                  selectedCodePrefKey, Set.of()));
       if (selectedCodesInStringSet.remove(Code.UEB.name())) {
         selectedCodesInStringSet.add(DEPRECATED_UEB_1);
         selectedCodesInStringSet.add(DEPRECATED_UEB_2);
@@ -572,7 +575,7 @@ public class BrailleUserPreferences {
       Set<String> selectedCodesInStringSet =
           new HashSet<>(
               brailleKeyboardSharedPreferences.getStringSet(
-                  selectedCodePrefKey, ImmutableSet.of()));
+                  selectedCodePrefKey, Set.of()));
       if (selectedCodesInStringSet.remove(DEPRECATED_UEB_1)) {
         hasUeb = true;
       }
@@ -611,7 +614,7 @@ public class BrailleUserPreferences {
       Set<String> selectedCodesInStringSet =
           new HashSet<>(
               brailleKeyboardSharedPreferences.getStringSet(
-                  selectedCodePrefKey, ImmutableSet.of()));
+                  selectedCodePrefKey, Set.of()));
       if (selectedCodesInStringSet.remove(DEPRECATED_SINHALA_IN)) {
         selectedCodesInStringSet.add(newCode);
       }
